hero title letter spacing bug fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -199,14 +199,23 @@ div.footer__title {
   text-transform: uppercase;
 }
 
-.hero__title_src-pages-index-module {
+/* .hero__title_src-pages-index-module {
   letter-spacing: 16px;
 }
+
+.hero__title_sobY {
+  letter-spacing: 16px;
+} */
+
+
+
 
 
 .footer {
   background-color: rgba(0,0,0,0.2);
 }
+
+
 
 /* .hero__title {
   font-style: normal;
