--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -144,4 +144,5 @@
   text-align: center;
   text-transform: uppercase;
   padding-bottom: 1rem;
+  letter-spacing: 16px;
 }
